--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.13",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "ngx-order-pipe": "^2.0.2",
+    "njwt": "^0.4.0",
     "password-hash": "^1.2.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
